--- a/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseWork/_ViewAll.cshtml
@@ -48,7 +48,7 @@
                                 </table>
                             </td>
                             <td>
-                                @Model.PendingWork[i].WorkDate
+                                @Model.PendingWork[i].WorkDate.ToString("dd/MM/yyyy")
                             </td>
                         </tr>
                     }
