--- a/CourtApp.Web/Areas/Report/Views/Register/CopyingRegister.cshtml
+++ b/CourtApp.Web/Areas/Report/Views/Register/CopyingRegister.cshtml
@@ -38,7 +38,7 @@
                 }
             });
             loadData(1);
-            $("#tblRegister").DataTable(
+            $("#tblCopyingRegister").DataTable(
                 {
                     "language": {
                         "emptyTable": "Record is not there!"
