--- a/CourtApp.Web/Areas/Report/Views/Register/DisposalRegister.cshtml
+++ b/CourtApp.Web/Areas/Report/Views/Register/DisposalRegister.cshtml
@@ -22,7 +22,7 @@
             $('#reload').on('click', function () {
                 loadData();
             });
-            $("#tblRegister").DataTable(
+            $("#tblRegisterDisp").DataTable(
                 {
                     "language": {
                         "emptyTable": "Record is not there!"
