--- a/CourtApp.Web/Areas/Report/Views/Register/InstitionRegister.cshtml
+++ b/CourtApp.Web/Areas/Report/Views/Register/InstitionRegister.cshtml
@@ -15,8 +15,7 @@
                                 <th>Court Type</th>
                                 <th>Court.</th>
                                 <th>Case Type</th>
-                                <th>Case No.</th>
-                                <th>Year</th>
+                                <th>Case No./Year</th>                               
                                 <th>Title</th>
                                 <th>Institution Date</th>
                                 <th></th>
@@ -33,8 +32,7 @@
                                     <td>@Model.dtmodel[i].CourtType</td>
                                     <td> @Model.dtmodel[i].CourtBench </td>
                                     <td>@Model.dtmodel[i].CaseType</td>
-                                    <td>@Model.dtmodel[i].CaseNo</td>
-                                    <td>@Model.dtmodel[i].CaseYear</td>
+                                    <td>@Model.dtmodel[i].CaseNo</td>                                    
                                     <td>
                                         @{
                                             string Title = Model.dtmodel[i].FirstTitle + " Vs " + Model.dtmodel[i].SecondTitle;
