--- a/CourtApp.Web/Areas/Client/Views/ManageClient/Index.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/Index.cshtml
@@ -5,9 +5,12 @@
 @model CourtApp.Web.Areas.Client.Model.GClientViewModel
 <div class="card">
     <div class="col-sm-12" style="padding:20px">
-      
+      @* 
         <a asp-area="Client" asp-controller="ManageClient" asp-action="CreateOrUpdate" class="btn bg-success">
             <i class="fa fa-plus-square"></i> Create
+        </a> *@
+        <a onclick="jQueryModalGet('/client/manageclient/CreateOrEdit','Add Client')" class="btn btn-outline-success">
+            <i class="fa fa-plus-square"></i> &nbsp;Add
         </a>
         <a id="reload" class="btn btn-primary text-white">
             <i class="fa fas fa-bolt"></i>
