--- a/CourtApp.Web/Areas/Client/Views/ManageClient/_ViewAll.cshtml
+++ b/CourtApp.Web/Areas/Client/Views/ManageClient/_ViewAll.cshtml
@@ -3,13 +3,16 @@
     <thead>
         <tr>
             <th style="width:5%">Sno.</th>
-            <th style="width:65%">Name</th>            
+            <th style="width:25%">Name</th>
             <th style="width:10%">Mobile</th>
-            <th style="width:20%">Email</th>
+            <th style="width:10%">Email</th>
+            <th style="width:20%">Appearence</th>
+            @* <th style="width:15%">Office Email</th> *@
+            <th style="width:25%">Opp. Counsel</th>
             @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Delete)).Result.Succeeded ||
             (AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Edit)).Result.Succeeded)
             {
-                <th>Actions</th>
+                <th style="width:5%">Actions</th>
             }
         </tr>
     </thead>
@@ -25,12 +28,21 @@
                 </td>
                 <td>
                     @bt.Name
-                </td>               
+                </td>
                 <td>
                     @bt.Mobile
                 </td>
                 <td>
                     @bt.Email
+                </td>
+                <td>
+                    @bt.Appearence
+                </td>
+                @* <td>
+                    @bt.OffEmail
+                </td> *@
+                <td>
+                    @bt.Councel
                 </td>
 
                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Delete)).Result.Succeeded ||
@@ -45,15 +57,22 @@
                             <div class="dropdown-menu shadow animated--grow-in">
                                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Edit)).Result.Succeeded)
                                 {
-                                    <a asp-area="Client" asp-controller="ManageClient" asp-action="CreateOrUpdate" asp-route-id="@bt.Id">
+                                    @* <a asp-area="Client" asp-controller="ManageClient" asp-action="CreateOrUpdate" asp-route-id="@bt.Id">
                                         <i class="fas fa-pencil-alt"></i> Edit
+                                    </a> *@
+                                    <a onclick="jQueryModalGet('/Client/ManageClient/CreateOrEdit?id=@bt.Id','Edit')"
+                                       class="dropdown-item">
+                                        <i class="fas fa-pencil-alt"></i>  Edit
                                     </a>
 
                                 }
                                 @if ((AuthorizationService.AuthorizeAsync(User, Permissions.Clients.Delete)).Result.Succeeded)
                                 {
-                                    <form id="form_delete_@bt.Id" asp-area="Client" asp-controller="manageclient" method="post"
-                                          asp-action="OnPostDelete" asp-route-id="@bt.Id" onsubmit="return jQueryModalDelete(this)">
+                                    <form id="form_delete_@bt.Id" asp-area="Client"
+                                          asp-controller="manageclient" method="post"
+                                          asp-action="OnPostDelete"
+                                          asp-route-id="@bt.Id"
+                                          onsubmit="return jQueryModalDelete(this)">
                                         <a href="javascript:$('#form_delete_@bt.Id').submit();" class="dropdown-item">
                                             <i class="fas fa-trash-alt"></i> Delete
                                         </a>
