--- a/CourtApp.Web/Areas/LawyerDiary/Views/CourtType/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/LawyerDiary/Views/CourtType/_CreateOrEdit.cshtml
@@ -3,10 +3,17 @@
     <div class="row">
         <div class="col-md-12">
             <div class="form-group row">
-                <label class="col-md-3 col-form-label">Court Type</label>
+                <label class="col-md-3 col-form-label">@localizer["Court type"] (<span style="color:red">*</span>)</label>
                 <div class="col-md-9">
-                    <input type="text" asp-for="CourtType" name="CourtType" class="form-control">
+                    <input type="text" asp-for="CourtType" class="form-control">
                     <span asp-validation-for="CourtType" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <label class="col-md-3 col-form-label">@localizer["Code"] (<span style="color:red">*</span>)</label>
+                <div class="col-md-9">
+                    <input type="text" maxlength="4" asp-for="Abbreviation"class="form-control">
+                    <span asp-validation-for="Abbreviation" class="text-danger"></span>
                 </div>
             </div>
            
