--- a/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
+++ b/CourtApp.Web/Areas/Litigation/Views/CaseManage/_CreateOrEdit.cshtml
@@ -32,7 +32,7 @@
                 <div class="col-md-12">
                     <div class="form-group row">
                         <label class="col-md-2 col-form-label">@localizer["Client Detail"] (<span style="color:red">*</span>)</label>
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="input-group">
                                 <select class="form-control select2bs4" id="ClientId"
                                         asp-for="ClientId" asp-items="@Model.ClientList">
@@ -41,13 +41,13 @@
                             </div>
                             <span asp-validation-for="ClientId" class="text-danger"></span>
                         </div>
-                        <div class="col-md-1">
+                        @* <div class="col-md-1">
                             <div class="input-group">
-                                <a onclick="jQueryModalGet('/client/manageclient/createorupdate','Add Client')" class="btn btn-outline-success">
+                                <a onclick="jQueryModalGet('/litigation/casemanage/OnCreateClientInfo','Add Client')" class="btn btn-outline-success">
                                     <i class="fa fa-plus-square"></i> &nbsp;Add
                                 </a>
                             </div>
-                        </div>
+                        </div> *@
                         <label class="col-md-2 col-form-label">@localizer["Institution Date"] (<span style="color:red">*</span>)</label>
                         <div class="col-md-4">
                             <div class="input-group">
@@ -301,11 +301,9 @@
 </div>
 @section Scripts
 {
-
     <script src="~/js/litigation/managecase.js"></script>
     <script>
-        $(document).ready(function () {
-            debugger;
+        $(document).ready(function () {           
             $("#hypButton").css("display", "block");
             $("#hypRepeatButton").css("display", "block");            
             var showHighCourt = @((bool)ViewBag.ShowHighCourt ? "true" : "false");
@@ -351,6 +349,7 @@
                 }
             }
         });
+
     </script>
 
 }
